<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_vibrant_green"
    tools:context=".detection_model">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/image_to_be_predicted"
        app:layout_constraintBottom_toTopOf="@+id/classified_as"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoutBtn2"
        app:layout_constraintVertical_bias="0.394"
        app:srcCompat="@drawable/pothole" />

    <TextView
        android:id="@+id/classified_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:text="@string/classified_as"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/sampletext"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/classified_as"
        app:layout_constraintTop_toBottomOf="@+id/picture"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/dark_vibrant_red"
        android:textStyle="bold"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classified_as" />

    <TextView
        android:id="@+id/profileName2"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:background="@drawable/block"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/sampletext"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/LogoutBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_vibrant_red"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:text="@string/logout"
        app:layout_constraintBaseline_toBaselineOf="@+id/profileName2"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_vibrant_red"
        android:textStyle="bold"
        android:text="@string/form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
        app:layout_constraintVertical_bias="0.263" />

</androidx.constraintlayout.widget.ConstraintLayout>