<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_vibrant_green"
    tools:context=".Form">

    <EditText
        android:id="@+id/found_pothole_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/block"
        android:ems="10"
        android:hint="@string/road_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edanswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/block"
        android:ems="10"
        android:hint="@string/answer"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="61dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/Question_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edanswer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/found_pothole_address"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="379dp"
        android:layout_height="61dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/Question_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edanswer2"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/edanswer1"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edanswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/block"
        android:ems="10"
        android:hint="@string/answer"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/Question_4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edanswer3"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/edanswer2"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edanswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/block"
        android:ems="10"
        android:hint="@string/answer"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnupload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnupload"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:text="@string/submit"
        android:textStyle="bold"
        android:backgroundTint="@color/dark_vibrant_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edanswer3"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Question_1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/found_pothole_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>